
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct TYPE_2__ {char* arch; } ;


 int EXIT_FAILURE ;
 int exit (int ) ;
 int printf (char*,...) ;
 TYPE_1__* targets ;

void
usage(char *progname)
{
 int i;
 printf("Usage: %s <type> [RemoteHost]\n",progname);
 printf("Available types:\n");
 for(i=0;targets[i].arch!=((void*)0);i++)
 {
  printf("\t%d\t-\t%s\n",i,targets[i].arch);
 }
 exit(EXIT_FAILURE);
}
